Changes towards version 0.2:
- FlushGraphics now waits and notifies on a per-thread level
- No longer using SHGetFolderPath on Windows - SvdB
- Key repeat is now enabled when typing text, from slayne
- Capital letter bug in new input code fixed, from slayne
- Oscilloscope now reacts to music when speech is disabled (OpenAL) -Mika
- Rewritten input code (better and adds joystick/pad support), from slayne
- Biadapt scaling for pure mode, from fOSSiL
- Saving user data in "%APPDATA%/Application Data" on windows - SvdB
- Melnorme comm fix, from TD.
- Planet scan font character fixes (micro.fon), from fOSSiL
- Temporary files are deleted on exit. - SvdB
- Font png's no longer need to have alpha channel, black background with
  white pixels is enough -Mika
- Added PC version intro/ending font, from VileRancour
- Added files for intro and ending sequence, from fOSSiL; extracted using
  Mudrony's scripts plus his own work.
- Added some corrected mods, from fOSSiL; extracted using Mudrony's scripts.
- Replaced add_sub_frame with arith_frame_blit -PhracturedBlue
- Crosshair in orbit leaving light trace to image in OpenGL mode fixed -Mika
- Planet scan should now take ~2secs on all computers -PhracturedBlue
- Updated earth image to look nicer (no vertical lines) -PhracturedBlue
- Clock semaphore is now created with a value of 0 -PhracturedBlue
- Rewrote Semaphore debugging code to be more useful - PhracturedBlue
- Better fix for clearing load/save screen - fOSSiL
- Implemented bilinear scaling in pure SDL mode - Mika
- Planet surface is now smoothed, from PhracturedBlue
- Implemented scanlines in pure SDL mode - Mika
- Star sizes and colors are now correct in solar system, from fOSSiL
- Captain portraits in melee are now updated properly after battle and
  bottom portrait always stays in correct place, from fOSSiL
- Removed 2xSaI and SuperSAI scaling due to GPL incompatiblities.
  They should be reimplemented later.